sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:29: error: 'while' expected but '}' found.
		} while (swap)
                ^AlgCocktailSort1:29: error: ';' expected but 'while' found.
		} while (swap)
                  ^AlgCocktailSort1:34: error: Unmatched closing brace '}' ignored here
}
^