sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code


def cocktailSort() { 

		var swap : Boolean =false 

		do {
		for (i<-0 to getNombreValeurs()-2) {
	
			
			if (plusPetit (i+1, i)){
				echange (i, i+1)
				swap == true
			}
			
		}

		for (i<-getNombreValeurs()-2 to 0 by -1) {
			
				
				if (plusPetit (i+1,i)){
					echange(i,i+1)
					
				}
						}
		}
		} while (swap)
}
